--- a/apps/client/src/components/test-builder/test-builder.component.html
+++ b/apps/client/src/components/test-builder/test-builder.component.html
@@ -6,13 +6,19 @@
 		}
 
 		<div class="flex-col p-4">
-			<div class="flex flex-col items-center">
+			<div class="flex flex-col gap-2">
 				@if(selectedFlow; as flow) {
-				<h1 class="text-2xl mb-10">
-					{{ flow.name }}
-				</h1>
 
-				<div class="divider divider-neutral w-full">Flow builder</div>
+				<div class="flex flex-col w-full items-center">
+					<h1 class="text-5xl mb-10 px-2 text-neutral-content">
+						{{ flow.name }}
+					</h1>
+					<small class="text-gray-400 min-w-fit">
+						last saved: {{ flow.updatedAt | date : 'dd MMM HH:mm' }}
+					</small>
+				</div>
+
+				<div class="divider divide-neutral-content w-full">Flow builder</div>
 
 				<app-test-composer class="w-full flex justify-center" [flow]="selectedFlow"></app-test-composer>
 
@@ -45,7 +51,7 @@
 					</li>
 
 					<ul
-						class="list bg-base-100 rounded-box"
+						class="list bg-base-100 flex flex-col gap-2"
 						cdkDropList
 						[cdkDropListData]="testFlows()"
 						[cdkDropListConnectedTo]="['selectedTestsList']">
@@ -73,36 +79,11 @@
 						</button>
 					</li>
 
-					<ul class="list bg-base-100 rounded-box">
-						@for(flow of allFlows(); track $index) {
+					<ul class="list bg-base-100 flex flex-col gap-2">
 						<li class="p-4 pb-2 text-xs opacity-60 tracking-wide">All Flows</li>
+						@for(flow of allFlows(); track $index) {
+						<app-flow-list-item (clicked)="selectedFlow = $event" [flow]="flow"></app-flow-list-item>
 
-						<li
-							class="list-row p-0"
-							[class.bg-info-content]="flow.id === selectedFlow?.id"
-							(click)="selectedFlow = flow">
-							<div class="flex flex-col items-start">
-								<span class="flex justify-between w-full items-center pt-1.5">
-									<p>{{ flow.name }}</p>
-									<button class="btn btn-xs btn-square btn-accent">
-										<svg
-											class="size-[1.2em]"
-											xmlns="http://www.w3.org/2000/svg"
-											viewBox="0 0 24 24">
-											<g
-												stroke-linejoin="round"
-												stroke-linecap="round"
-												stroke-width="2"
-												fill="none"
-												stroke="currentColor">
-												<path d="M6 3L20 12 6 21 6 3z"></path>
-											</g>
-										</svg>
-									</button>
-								</span>
-								<small class="text-xs font-semibold text-gray-500">{{ flow.description }}</small>
-							</div>
-						</li>
 						}
 					</ul>
 				</div>
@@ -137,18 +118,7 @@
 	</div>
 </ng-template>
 
-<dialog id="record_test_modal" class="modal">
-	<div class="modal-box">
-		<h3 class="text-lg font-bold">Hello!</h3>
-		<p class="py-4">Press ESC key or click the button below to close</p>
-		<div class="modal-action">
-			<form method="dialog">
-				<!-- if there is a button in form, it will close the modal -->
-				<button class="btn">Close</button>
-			</form>
-		</div>
-	</div>
-</dialog>
+
 
 <!-- Open the modal using ID.showModal() method -->
 <dialog id="create_test_modal" class="modal">
