--- a/apps/client/src/components/test-list-item/test-list-item.component.html
+++ b/apps/client/src/components/test-list-item/test-list-item.component.html
@@ -1,28 +1,41 @@
-
-
-
 <dialog #confirmDeleteModal id="confirm_delete_modal" class="modal">
 	<div class="modal-box">
-		<h3 class="text-lg font-bold">Hello!</h3>
-		<h3> Are you sure you want to delete {{test.name}} </h3>
+		<h3 class="text-lg font-bold">Are you Sure?</h3>
+		<h3>Are you sure you want to delete {{ test.name }}</h3>
 
-		<div class="flex flex-between w-full">
-			<button class="btn" (click)="deleteTest.next(test)">Yes</button>
-			<button class="btn" (click)="confirmDeleteModal.close()">No</button>
+		<div class="flex justify-between w-full pt-12">
+			<button class="btn btn-error dark:text-white" (click)="deleteTest.next(test)">
+				Delete {{ test.name }}
+			</button>
+			<button class="btn btn-neutral-content" (click)="confirmDeleteModal.close()">Cancel</button>
 		</div>
 	</div>
 </dialog>
 
+<dialog #recordTestModal class="modal">
+	<div class="modal-box">
+		<h3 class="text-lg font-bold">Update Test Recording</h3>
+		<h3>
+			Warning this will overwrite the previous test code.
+			<br />
+			Are you sure?
+		</h3>
 
-<li
-	class="p-2 rounded-lg bg-slate-800"
-	cdkDrag
-	(cdkDragEnded)="dragEnded($event)">
-	<div class="flex flex-col items-start justify-center">
+		<div class="flex justify-between w-full pt-12">
+			<button class="btn btn-error dark:text-white" (click)="confirmRecordTest(test)">
+				Re Record {{ test.name }}
+			</button>
+			<button class="btn btn-neutral-content" (click)="recordTestModal.close()">Cancel</button>
+		</div>
+	</div>
+</dialog>
+
+<li class="rounded-lg bg-slate-800 cursor-move" cdkDrag (cdkDragEnded)="dragEnded($event)">
+	<div class="flex flex-col items-start justify-center p-2 px-4">
 		<span class="flex justify-between w-full pt-1.5">
 			<p>{{ test.name }}</p>
 			<div class="flex space-x-2">
-				<button class="btn btn-xs btn-square btn-accent" (click)="playTest(test)">
+				<button class="btn btn-xs btn-square btn-accent hover:scale-110 hover:text-white" (click)="playTest(test)">
 					<svg class="size-[1.2em]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 						<g
 							stroke-linejoin="round"
@@ -34,7 +47,7 @@
 						</g>
 					</svg>
 				</button>
-				<button class="btn btn-xs btn-square btn-error" onclick="record_test_modal.showModal()">
+				<button class="btn btn-xs btn-square btn-error hover:scale-110 hover:text-white" (click)="showRecordTestModal()">
 					<svg class="size-[1.2em]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 						<g
 							stroke-linejoin="round"
@@ -46,26 +59,25 @@
 						</g>
 					</svg>
 				</button>
-				<button class="btn btn-xs btn-square btn-danger" (click)="showDeleteModal()">
-                    <svg class="size-[1.2em]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                        <g
-                            stroke-linejoin="round"
-                            stroke-linecap="round"
-                            stroke-width="2"
-                            fill="none"
-                            stroke="currentColor">
-                            <path d="M3 6h18M9 6v12m6-12v12M4 6l1-3h14l1 3M5 6v12a2 2 0 002 2h10a2 2 0 002-2V6"></path>
-                        </g>
-                    </svg>
-                </button>	
+				@if(!hideDelete) {
+
+				<button class="btn btn-xs btn-square btn-danger hover:scale-110 hover:text-white" (click)="showDeleteModal()">
+					<svg class="size-[1.2em]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+						<g
+							stroke-linejoin="round"
+							stroke-linecap="round"
+							stroke-width="2"
+							fill="none"
+							stroke="currentColor">
+							<path d="M3 6h18M9 6v12m6-12v12M4 6l1-3h14l1 3M5 6v12a2 2 0 002 2h10a2 2 0 002-2V6"></path>
+						</g>
+					</svg>
+				</button>
+				}
 			</div>
 		</span>
 		<small class="text-xs font-semibold text-gray-500">
 			{{ test.description }}
 		</small>
 	</div>
-	
 </li>
-
-
-
