Add flow run result DTO, enhance loading component, and update test recordings

--- a/apps/client/src/components/fullscreen-loading/fullscreen-loading.component.html
+++ b/apps/client/src/components/fullscreen-loading/fullscreen-loading.component.html
@@ -1,4 +1,4 @@
-<div class="fullscreen-loading">
+<div class="fullscreen-loading z-50">
 	<div class="spinner"></div>
 	<p>{{ message }}</p>
 </div>
