--- a/apps/client/src/components/test-list-item/test-list-item.component.html
+++ b/apps/client/src/components/test-list-item/test-list-item.component.html
@@ -35,7 +35,9 @@
 		<span class="flex justify-between w-full pt-1.5">
 			<p>{{ test.name }}</p>
 			<div class="flex space-x-2">
-				<button class="btn btn-xs btn-square btn-accent hover:scale-110 hover:text-white" (click)="playTest(test)">
+				<button
+					class="btn btn-xs btn-square btn-accent hover:scale-110 hover:text-white"
+					(click)="playTest(test)">
 					<svg class="size-[1.2em]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 						<g
 							stroke-linejoin="round"
@@ -47,7 +49,9 @@
 						</g>
 					</svg>
 				</button>
-				<button class="btn btn-xs btn-square btn-error hover:scale-110 hover:text-white" (click)="showRecordTestModal()">
+				<button
+					class="btn btn-xs btn-square btn-error hover:scale-110 hover:text-white"
+					(click)="showRecordTestModal()">
 					<svg class="size-[1.2em]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 						<g
 							stroke-linejoin="round"
@@ -61,7 +65,9 @@
 				</button>
 				@if(!hideDelete) {
 
-				<button class="btn btn-xs btn-square btn-danger hover:scale-110 hover:text-white" (click)="showDeleteModal()">
+				<button
+					class="btn btn-xs btn-square btn-danger hover:scale-110 hover:text-white"
+					(click)="showDeleteModal()">
 					<svg class="size-[1.2em]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 						<g
 							stroke-linejoin="round"
@@ -76,8 +82,26 @@
 				}
 			</div>
 		</span>
-		<small class="text-xs font-semibold text-gray-500">
+		<small class="text-xs font-semibold text-gray-500 pb-1">
 			{{ test.description }}
 		</small>
+		<div class="flex flex-col w-full opacity-20 text-xs">
+			<div
+				class="hover:bg-base-300 hover:text-white hover:scale-110 cursor-pointer p-1 w-fit rounded-md"
+				(click)="copyText(test.startUrl)">
+				Start:
+				<small>
+					{{ test.startUrl }}
+				</small>
+			</div>
+			<div
+				class="hover:bg-base-300 hover:text-white hover:scale-110 cursor-pointer p-1 w-fit rounded-md"
+				(click)="copyText(test.endUrl)">
+				End:
+				<small>
+					{{ test.endUrl }}
+				</small>
+			</div>
+		</div>
 	</div>
 </li>
