--- a/apps/client/src/components/test-list-item/test-list-item.component.html
+++ b/apps/client/src/components/test-list-item/test-list-item.component.html
@@ -30,7 +30,15 @@
 	</div>
 </dialog>
 
-<li class="rounded-lg bg-slate-800 cursor-move" cdkDrag (cdkDragEnded)="dragEnded($event)">
+<li
+	[ngClass]="{
+		'bg-success-content': status === 'success',
+		'bg-error-content': status === 'failure',
+		'bg-warning-content': status === 'warning'
+	}"
+	class="rounded-lg cursor-move bg-slate-800"
+	cdkDrag
+	(cdkDragEnded)="dragEnded($event)">
 	<div class="flex flex-col items-start justify-center p-2 px-4">
 		<span class="flex justify-between w-full pt-1.5">
 			<p>{{ test.name }}</p>
@@ -85,7 +93,7 @@
 		<small class="text-xs font-semibold text-gray-500 pb-1">
 			{{ test.description }}
 		</small>
-		<div class="flex flex-col w-full opacity-20 text-xs">
+		<div class="flex flex-col w-full opacity-50 text-xs">
 			<div
 				class="hover:bg-base-300 hover:text-white hover:scale-110 cursor-pointer p-1 w-fit rounded-md"
 				(click)="copyText(test.startUrl)">
@@ -103,5 +111,12 @@
 				</small>
 			</div>
 		</div>
+
+		@if(status === 'failure' && flowTestId) {
+		<div class="mockup-code w-full ">
+			<code class="pl-8">{{ testManager.flowTestRunHistory()[flowTestId].error?.trim() }}</code>
+		</div>
+
+		}
 	</div>
 </li>
