--- a/apps/client/src/components/flow-test-list-item/flow-test-list-item.component.html
+++ b/apps/client/src/components/flow-test-list-item/flow-test-list-item.component.html
@@ -3,15 +3,18 @@
 	cdkDrag
 	(cdkDragEnded)="dragEnded($event)"
 	(click)="clicked.emit(flowTest)">
+	@let testHistory = testManager.flowTestRunHistory()[flowTest.flow.id][flowTest.test.id];
+
 	<div
 		class="flex flex-col items-start justify-center p-2 px-4 rounded-lg"
 		[ngClass]="{
-			'bg-success-content': status === 'success',
-			'bg-error-content': status === 'failure',
-			'bg-warning-content': status === 'warning'
+			'bg-success-content': testHistory.success,
+			'bg-error-content': testHistory.error,
+			'bg-warning-content': showLinkWarning
 		}">
 		<span class="flex justify-between w-full pt-1.5">
-			<p>{{ flowTest.test.name }}</p>
+			<p class="pb-2">{{ flowTest.test.name }}</p>
+
 			<div class="flex space-x-2">
 				<!-- <button
 					class="btn btn-xs btn-square btn-accent hover:scale-110 hover:text-white"
@@ -43,11 +46,23 @@
 				</button> -->
 			</div>
 		</span>
-		<small class="text-xs font-semibold text-gray-500 pb-1">
+		<small class="text-xs font-thin text-gray-300 pb-1">
 			{{ flowTest.test.description }}
 		</small>
-		<div class="flex flex-col w-full opacity-50 text-xs">
+
+		@if(showLinkWarning) {
+
+		<span class="w-full text-md whitespace-break-spaces text-warning">
+			<div class="font-bold">*Warning</div>
+			<small class="text-white italic font-thin">
+				<strong>Start URL does not match previous test end URL</strong>
+				, this may cause your flow to break!
+			</small>
+		</span>
+		}
+		<div class="flex flex-col w-full text-xs">
 			<div
+				[class.text-warning]="showLinkWarning"
 				class="hover:bg-base-300 hover:text-white hover:scale-110 cursor-pointer p-1 w-fit rounded-md"
 				(click)="copyText(flowTest.test.startUrl)">
 				Start:
@@ -65,13 +80,12 @@
 			</div>
 		</div>
 
-		@if(status === 'failure') { @if(testManager.flowTestRunHistory()[flowTest.flow.id]; as flowRunHistory) {
-			{{flowRunHistory | json}}
+		@if(testHistory.error) {
 		<div class="mockup-code w-full">
 			<pre class="max-w-full overflow-x-auto whitespace-pre-wrap h-fit">
-				<code class="pl-8">{{ flowRunHistory[flowTest.test.id].error?.trim() }}</code>
+				<code class="pl-8">{{ testHistory.error }}</code>
 			</pre>
 		</div>
-		} }
+		}
 	</div>
 </li>
