--- a/apps/client/src/components/test-composer/test-composer.component.html
+++ b/apps/client/src/components/test-composer/test-composer.component.html
@@ -26,6 +26,7 @@
 					<ng-icon name="heroMinusCircle"></ng-icon>
 				</span>
 				<app-flow-test-list-item
+					class="w-full"
 					[flowTest]="flowTest"
 					[showLinkWarning]="!isPrevFlowLinkValid($index)"></app-flow-test-list-item>
 			</div>
